test/scc_test/stmt/semantic-errors/005.t
void test()
{
    do
        case 1:
            ;
    while (0);
}